// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Top Stories components when given appropriate data 1`] = `
<DocumentFragment>
  .emotion-41 {
  margin: 0 auto;
  padding-bottom: 2rem;
}

@media (max-width:37.4375rem) {
  .emotion-41 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-41 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-41 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-41 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .emotion-41 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .emotion-41 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

.emotion-39 {
  margin-bottom: 1rem;
}

@media (max-width:63rem) {
  .emotion-39 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-39 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .emotion-39 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .emotion-39 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-39 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-39 {
    margin-bottom: 1.5rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width:37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-37 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-23 {
  padding: 0.5rem 0 1rem;
}

@media (max-width:62.9375rem) {
  .emotion-23 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-23:last-child {
  border: none;
}

@media (min-width:37.5rem) {
  .emotion-23 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-23 {
    padding: 0 0 1.5rem;
  }
}

.emotion-23:first-child {
  padding-top: 0;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-23:first-child {
    padding-top: 1rem;
  }
}

.emotion-23:last-child {
  padding-bottom: 0;
}

.emotion-21 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-21 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-21 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-21 {
      display: block;
    }
}
}

.emotion-19 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-19 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-19 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

.emotion-19 >div {
  vertical-align: middle;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-19 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }

@media (min-width:63rem) {
    .emotion-19 {
      padding-top: 0;
    }
}
}

.emotion-19 >div {
  display: inline-block;
  vertical-align: initial;
}

.emotion-19 svg {
  margin: 0;
}

.emotion-15 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-13 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-13:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-13:hover,
.emotion-13:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13:visited {
  color: #6E6E73;
}

.emotion-17 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-17 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<section
    aria-labelledby="top-stories-heading"
    class="emotion-41 emotion-42"
    data-e2e="top-stories-heading"
    role="region"
  >
    <div
      class="emotion-39 emotion-40"
    >
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <div
          class="emotion-0 emotion-1"
        />
        <h2
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-4 emotion-5"
            >
              <span
                class="emotion-2 emotion-3"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="emotion-37 emotion-38"
        role="list"
      >
        <li
          class="emotion-23 emotion-24"
        >
          <div
            class="emotion-21 emotion-22"
            data-e2e="story-promo"
          >
            <div
              class="emotion-19 emotion-20"
              dir="ltr"
            >
              <h3
                class="emotion-15 emotion-16"
              >
                <a
                  class="emotion-13 emotion-14"
                  href="/mundo/noticias-internacional-51939501"
                >
                  China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
                </a>
              </h3>
              <time
                class="emotion-17 emotion-18"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-24"
        >
          <div
            class="emotion-21 emotion-22"
            data-e2e="story-promo"
          >
            <div
              class="emotion-19 emotion-20"
              dir="ltr"
            >
              <h3
                class="emotion-15 emotion-16"
              >
                <a
                  class="emotion-13 emotion-14"
                  href="/pidgin/tori-51945757"
                >
                  Nigeria don get five new cases of Coronavirus - See how e happun
                </a>
              </h3>
              <time
                class="emotion-17 emotion-18"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Top Stories components when without <ul> 1`] = `
<DocumentFragment>
  .emotion-27 {
  margin: 0 auto;
  padding-bottom: 2rem;
}

@media (max-width:37.4375rem) {
  .emotion-27 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-27 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-27 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-27 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .emotion-27 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .emotion-27 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

.emotion-25 {
  margin-bottom: 1rem;
}

@media (max-width:63rem) {
  .emotion-25 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-25 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .emotion-25 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .emotion-25 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-25 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-25 {
    margin-bottom: 1.5rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width:37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-21 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-21 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-21 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-21 {
      display: block;
    }
}
}

.emotion-19 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-19 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-19 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

.emotion-19 >div {
  vertical-align: middle;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-19 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }

@media (min-width:63rem) {
    .emotion-19 {
      padding-top: 0;
    }
}
}

.emotion-19 >div {
  display: inline-block;
  vertical-align: initial;
}

.emotion-19 svg {
  margin: 0;
}

.emotion-15 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-13 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-13:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-13:hover,
.emotion-13:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13:visited {
  color: #6E6E73;
}

.emotion-17 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-17 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-23 {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-23 {
    padding-bottom: 1.5rem;
  }
}

<section
    aria-labelledby="top-stories-heading"
    class="emotion-27 emotion-28"
    data-e2e="top-stories-heading"
    role="region"
  >
    <div
      class="emotion-25 emotion-26"
    >
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <div
          class="emotion-0 emotion-1"
        />
        <h2
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-4 emotion-5"
            >
              <span
                class="emotion-2 emotion-3"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="emotion-23 emotion-24"
      >
        <div
          class="emotion-21 emotion-22"
          data-e2e="story-promo"
        >
          <div
            class="emotion-19 emotion-20"
            dir="ltr"
          >
            <h3
              class="emotion-15 emotion-16"
            >
              <a
                class="emotion-13 emotion-14"
                href="/mundo/noticias-internacional-51939501"
              >
                China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
              </a>
            </h3>
            <time
              class="emotion-17 emotion-18"
              datetime="2020-02-03"
            >
              3rd February 2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
